--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.1",
     "hair-saloon": "file:",
     "mongoose": "^8.5.2",
-    "nodemailer": "^6.9.15"
+    "nodemailer": "^6.9.15",
+    "nodemon": "^3.1.7"
   }
 }
